blood and collision

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="text-center text-2xl">Help Tanjiro Defeat Rui and Save Nezuko!</div>
         <div>
             <div id="game" class="relative w-[95%] h-[55vh] bg-gray-900 border-2 border-black p-5 mx-auto mt-5">
-                <div id="tanjiroContainer" class="absolute top-1/4 right-0 transform -translate-x-1/2 bg-yellow-500 rounded-full text-center text-lg"><img src="./asset/image/tanjiro.png" alt="Tanjiro" class="w-[60px]"></img></div>
+                <div id="tanjiroContainer" class="absolute top-1/4 left-[95%] transform -translate-x-1/2 bg-yellow-500 rounded-full text-center text-lg"><img src="./asset/image/tanjiro.png" alt="Tanjiro" id="tanjiroImage" class="w-[60px]"></img></div>
                 <div id="ruiContainer" class="absolute top-1/3 left-0 transform translate-x-1/2 bg-yellow-500 rounded-full text-center text-lg"><img src="./asset/image/rui.png" alt="Rui" class="w-[150px]"></img></div>
                 <div id="message" class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-white p-2 hidden"></div>
             </div>
