--- a/index.html
+++ b/index.html
@@ -45,14 +45,27 @@
         </span>
     </header>
     <br><br>
-    <main class="font-ab-cave">
+    <main class="font-ab-cave relative">
         <div class="text-center"><h1 class="font-ab-cave text-6xl italic">Tanjiro vs Rui</h1></div>
         <div class="text-center text-2xl">Help Tanjiro Defeat Rui and Save Nezuko!</div>
+        <div id="duelLevelContainer" class="font-ab-cave">You Are Fighting Rui Level <p id="duelLevelMeter"></p></div>
         <div>
+
+
+
+            </div>
             <div id="game" class="relative w-[95%] h-[55vh] bg-gray-900 border-2 border-black p-5 mx-auto mt-5">
+                <div id="messageContainer" class="hidden relative w-[100%] h-[100%] flex justify-center items-center">
+                    <div id="overlay" class="absolute inset-0 bg-black bg-opacity-50 z-3"></div>
+                    <div id="message" class="relative border bg-white p-2 z-4 w-[50%] p-3 flex flex-col justify-center items-center text-center">
+                        <h1>You Win!</h1>
+                        <p> Tanjiro has saved Nezuko from Rui!</p>
+                        <button id="nextLevelButton" class="border border-black rounded-lg cursor-pointer hover:scale-110 active:scale-90">Next Level</button>
+                    </div>
+                </div>
                 <div id="tanjiroContainer" class="absolute top-1/4 left-[95%] transform -translate-x-1/2 bg-yellow-500 rounded-full text-center text-lg z-2"><img src="./asset/image/tanjiro.png" alt="Tanjiro" id="tanjiroImage" class="w-[60px]"></img></div>
                 <div id="ruiContainer" class="absolute top-1/3 left-0 transform translate-x-1/2 bg-yellow-500 rounded-full text-center text-lg z-1"><img src="./asset/image/rui.png" alt="Rui" class="w-[150px]"></img></div>
-                <div id="message" class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-white p-2 hidden"></div>
+                
             </div>
         </div>
     </main>
