--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
     <br><br>
     <main class="font-ab-cave relative">
         <div class="text-center"><h1 class="font-ab-cave text-6xl italic">Tanjiro vs Rui</h1></div>
-        <div class="text-center text-2xl">Help Tanjiro Defeat Rui and Save Nezuko!</div>
-        <div id="duelLevelContainer" class="font-ab-cave">You Are Fighting Rui Level <p id="duelLevelMeter"></p></div>
+        <div class="text-center text-2xl">Help Tanjiro Defeat Rui and Save Nezuko!</div><br>
+        <div id="duelLevelContainer" class="font-ab-cave text-center">You Are Fighting Rui Level <span id="duelLevelMeter"></span></div>
         <div>
 
 
