--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 
             </div>
-            <div id="game" class="relative w-[95%] h-[55vh] bg-gray-900 border-2 border-black p-5 mx-auto mt-5">
+            <div id="game" class="relative w-[95%] h-[55vh] bg-gray-900 border-2 border-black p-8 mx-auto mt-5">
                 <div id="messageContainer" class="hidden relative w-[100%] h-[100%] flex justify-center items-center">
                     <div id="overlay" class="absolute inset-0 bg-black bg-opacity-50 z-3"></div>
                     <div id="message" class="relative border bg-white p-2 z-4 w-[50%] p-3 flex flex-col justify-center items-center text-center">
@@ -63,8 +63,8 @@
                         <button id="nextLevelButton" class="border border-black rounded-lg cursor-pointer hover:scale-110 active:scale-90">Next Level</button>
                     </div>
                 </div>
-                <div id="tanjiroContainer" class="absolute top-1/4 left-[95%] transform -translate-x-1/2 bg-yellow-500 rounded-full text-center text-lg z-2"><img src="./asset/image/tanjiro.png" alt="Tanjiro" id="tanjiroImage" class="w-[60px]"></img></div>
-                <div id="ruiContainer" class="absolute top-1/3 left-0 transform translate-x-1/2 bg-yellow-500 rounded-full text-center text-lg z-1"><img src="./asset/image/rui.png" alt="Rui" class="w-[150px]"></img></div>
+                <div id="tanjiroContainer" class="absolute transform bg-yellow-500 rounded-full text-center text-lg z-2"><img src="./asset/image/tanjiro.png" alt="Tanjiro" id="tanjiroImage" class=""></img></div>
+                <div id="ruiContainer" class="absolute top-1/3 left-0 transform translate-x-1/2 bg-yellow-500 rounded-full text-center text-lg z-1"><img src="./asset/image/rui.png" alt="Rui" class="w-[5em]"></img></div>
                 
             </div>
         </div>
