cut the spiderweb

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 
             </div>
             <div id="game" class="relative w-[95%] h-[55vh] bg-gray-900 border-2 border-black p-1 mx-auto mt-5">
+                <audio src="./asset/sound/swordslashsound.wav" id="swordslashsound"></audio>
                 <div id="messageContainer" class="hidden relative w-[100%] h-[100%] flex justify-center items-center">
                     <div id="overlay" class="absolute inset-0 bg-black bg-opacity-50 z-3"></div>
                     <div id="message" class="relative border bg-white p-2 z-4 w-[50%] p-3 flex flex-col justify-center items-center text-center">
