change arena background

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 
             </div>
-            <div id="game" class="relative w-[95%] h-[55vh] bg-gray-900 border-2 border-black p-1 mx-auto mt-5">
+            <div id="game" class="relative w-[95%] h-[55vh] bg-[url('./asset/image/tiletrack.png')] bg-cover bg-center border-2 border-black p-1 mx-auto mt-5">
                 <audio src="./asset/sound/swordslashsound.wav" id="swordslashsound"></audio>
                 <audio src="./asset/sound/tanjirobeheadrui.mp3" id="tanjirobeheadruisound"></audio>
 
