--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
 
     <!--Font-->
     <link href="https://fonts.cdnfonts.com/css/ab-cave" rel="stylesheet">
-                
+    
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="favicon.png">
 
     <meta property="og:title" content="Tanjiro vs Rui" />
     <meta property="og:type" content="Game" />
     <meta property="og:url" content="https://www.tanjirorui.com" />
     <meta property="og:image" content="https://ia.media-imdb.com/images/rock.jpg" />
-    <title>Document</title>
+    <title>Tanjiro vs Rui</title>
 
     <style>
         .font-ab-cave {
