--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.cdnfonts.com/css/ab-cave" rel="stylesheet">
     
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="icon" type="image/png" href="./asset/image/favicon.png">
 
     <meta property="og:title" content="Tanjiro vs Rui" />
     <meta property="og:type" content="Game" />
